--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,20 +1,34 @@
-name: MLOps Tourism Pipeline
-on: [push, pull_request]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Data Preparation
-        run: python src/data_preparation.py
-      - name: Model Training
-        run: python src/model_training.py
-      - name: Deploy to Hugging Face / Run App
-        run: echo "Deployment script or trigger here"
+  - name: Set up Python
+    uses: actions/setup-python@v4
+    with:
+      python-version: '3.9'
+
+  - name: Install dependencies
+    run: pip install -r requirements.txt
+
+  - name: Configure Hugging Face credentials
+    run: |
+      mkdir -p ~/.cache/huggingface
+      echo "hf_$$TOKEN$$" > ~/.cache/huggingface/token
+    env:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
+
+  - name: Run data preparation script
+    run: python src/data_preparation.py
+
+  - name: Run model training script
+    run: python src/model_training.py
+
+  - name: Log in to Docker Hub
+    uses: docker/login-action@v2
+    with:
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
+
+  - name: Build and push Docker image
+    uses: docker/build-and-push-action@v4
+    with:
+      context: .
+      file: ./Dockerfile
+      push: true
+      tags: pallabbh/tourism-app:latest,pallabbh/tourism-app:${{ github.sha }}
